--- a/index.html
+++ b/index.html
@@ -29,10 +29,23 @@
 <!--sección sobre promociones-->
         <section>
         <h2>Promociones</h2>
+        <ul>
+                <li><strong>2x1</strong> en Muffins los Lunes y Miercoles</li>
+                <li><strong>Combo super muffin:</strong> Cafe + Pan por 55</li>
+                <li>10% de descuento en pasteles de temporada</li>
+            </ul>
         </section>
 <!--sección sobre menú-->
         <section>
         <h2>Menú</h2>
+        <!--Tarjeta de postre-->
+            <div>
+                <img src="https://i.blogs.es/396729/como-hacer-carlota-pay-de-limon-1-/450_1000.jpg" alt="Imagen de un pay de limon">
+                <h3>Pay de limon</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quos laudantium odio </p>
+                <p> <strong> $280 </strong> </p>
+                <button>Agregar</button>
+            </div>
 
 
         <section>
