Agregando estilos con style

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasteleria: Muffin</title>
+    <title>Cafetería Gaby</title>
 </head>
-<body>
+<body style="background-color: pink;text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;">
     <header><!--Esta es una etiqueta semantica de cabecera-->
         <nav>
             <ul><!--Lista desordenada-->            
@@ -23,8 +23,8 @@
 <!--sección sobre nosotros-->
         <article id="Nosotros">
         
-        <h1>Cafetería Gaby</h1>
-        <p> Mi pasión es regalar sonrisas a través de tocar al alma a 
+        <h1 style="color: blueviolet;">Cafetería Gaby</h1>
+        <p style="font-size: 22px;"> Mi pasión es regalar sonrisas a través de tocar al alma a 
             través del paladar. Endulza momentos especiales y vive recuerdos especiales.</p>
         </article>
 <!--sección sobre promociones-->
@@ -41,11 +41,12 @@
         <h2>Menú</h2>
         <!--Tarjeta de postre-->
             <div>
-                <img src="https://i.blogs.es/396729/como-hacer-carlota-pay-de-limon-1-/450_1000.jpg" alt="Imagen de un pay de limon">
+                <img src="https://i.blogs.es/396729/como-hacer-carlota-pay-de-limon-1-/450_1000.jpg" alt="Imagen de un pay de limon" width="300">
+
                 <h3>Pay de limon</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quos laudantium odio </p>
                 <p> <strong> $280 </strong> </p>
-                <button>Agregar</button>
+                <button style="border-radius: 8px;">Agregar</button>
             </div>
 
 
